# model-renderer

./: CMakeLists.txt  README.md
res/models/boat/: boat.mtl
res/models/bridge/: bridge.mtl
res/models/cottage/: house.mtl
res/models/crate/: box.mtl
res/models/deadtree/: DeadTree.mtl
res/models/fern/: fern.mtl
res/models/firTree/: untitled.mtl
res/models/fountain/: fount.mtl
res/models/grass/: grass.mtl
res/models/lowpolytree/: lowpolytree.mtl
res/models/oaktree/: untitled.mtl
res/models/rock/: rock.mtl
res/models/statue/: untitled.mtl
res/models/statue/kneeled/: untitled.mtl
res/models/wall/: wall.mtl
src/: CMakeLists.txt
src/cpps/: Camera.cpp  Light.cpp  Mesh.cpp  Model.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  Window.cpp  main.cpp
src/headers/: Camera.h  Light.h  Mesh.h  Model.h  Renderer.h  Shader.h  Texture.h  Window.h
src/shaders/: modelFrag.glsl  modelVert.glsl
